# Aspect-Based-Sentiment-Analysis-API

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
ABSAapi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Notebooks/: data_overview.ipynb  download_data.py  inference.py  preprocess_and_tokenize.ipynb  train.ipynb
alembic/: env.py
alembic/versions/: 3ec7960e8331_fresh_start.py  85944387fdf2_initial_tables.py
analyzer/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
analyzer/migrations/: 0001_initial.py  0002_fileupload.py
app/api/: deps.py
app/api/v1/endpoints/: analysis.py  auth.py
app/core/: config.py  security.py
app/db/: base.py  crud_user.py  session.py
app/models/: __init__.py  analysis.py  user.py
app/schemas/: analysis.py  user.py
app/services/: ai_model.py
bulk_uploads/: test_reviews_HauzLCf.csv
